fetching  data from db, using axios; client application

--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -1,1 +1,14 @@
--- Users should accept the tasks from the application
+<!-- -- Users should accept the tasks from the application -->
+<!-- now the view tasks function fetches all the data, and the accepttaskcard is a child component, now when the user clicks on the accept -->
+<!-- task card button (accpet now ) it should return a callback funciotn that has the id of the object as an argument. -->
+<!---->
+<!-- -- need to create a place where i can handle all the logic from the client react native application, -->
+<!---->
+
+## Step one
+
+1. I need to create a store and reducer that asynchronously fetches the data when the user logs in to the app and store the state into
+   async storage for offline usage.
+
+<!-- 2. In the same way, when the user creates an account and logs in to the application for the first time, it should trigger a function, -->
+<!--    that checks for device tockens for on the database, if there is no token available, it should upload the device unique token to the db. -->
