feat: thunk middlware for fetching from the api asynchronously., view tasks imporivements

--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -8,7 +8,14 @@
 ## Step one
 
 1. I need to create a store and reducer that asynchronously fetches the data when the user logs in to the app and store the state into
-   async storage for offline usage.
+   async storage for offline usage ( completed ),
+   now,
+   if the device has an internet connection, fetch the data from the thunk middleware, if there is no internet, use the async storage instead.
 
 <!-- 2. In the same way, when the user creates an account and logs in to the application for the first time, it should trigger a function, -->
 <!--    that checks for device tockens for on the database, if there is no token available, it should upload the device unique token to the db. -->
+
+3. Stored the data inside the async storage, but how to update the tasks ?
+
+// write a thunk middleware that updates the db using axios.patch(),
+// dispatch that middlware with the id of the task. from the accept task card.
