Implimented authenetication and authorization with auth0 protected routes for tasks, employees

--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -17,5 +17,13 @@
 
 3. Stored the data inside the async storage, but how to update the tasks ?
 
-// write a thunk middleware that updates the db using axios.patch(),
-// dispatch that middlware with the id of the task. from the accept task card.
+// write a thunk middleware that updates the db using axios.patch(), _ completed _
+// dispatch that middlware with the id of the task. from the accept task _ completed _
+
+-- TODO;
+
+1. Authorization with JWT
+2. Socket IO Video / Audio conference / Realtime messaging with WebRTC
+3. Manage Profile
+
+-- Learn JWT
