--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -17,13 +17,13 @@
 
 3. Stored the data inside the async storage, but how to update the tasks ?
 
-// write a thunk middleware that updates the db using axios.patch(), _ completed _
-// dispatch that middlware with the id of the task. from the accept task _ completed _
+// write a thunk middleware that updates the db using axios.patch(), [completed]
+// dispatch that middlware with the id of the task. from the accept task [completed]
 
 -- TODO;
 
-1. Authorization with JWT
-2. Socket IO Video / Audio conference / Realtime messaging with WebRTC
-3. Manage Profile
-
--- Learn JWT
+1. Authorization with JWT [completed]
+1. 1. Authentication should not leave the application
+1. Socket IO Video / Audio conference / Realtime messaging with WebRTC
+1. Manage Profile [completed]
+1. Auth should return a jwt token, send that token to the server.
