pre; data flow change

--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -27,5 +27,7 @@
 1. Socket IO Video / Audio conference / Realtime messaging with WebRTC
 1. Manage Profile [completed]
 1. Auth should return a jwt token, send that token to the server and verify. [completed]
-1. Need to reduce the network requests by storing keys and stuffs on the secure store.
-1. Define application flow
+1. Need to reduce the network requests by storing keys and stuffs on the secure store. [completed]
+1. Define application flow [completed]
+
+=> Verify the user's email address with existing workspace participants
