--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -29,3 +29,4 @@
 1. Auth should return a jwt token, send that token to the server and verify. [completed]
 1. Need to reduce the network requests by storing keys and stuffs on the secure store. [completed]
 1. Define application flow [completed]
+1. Create a workspace with userid as owner (client side)
