--- a/clientapp/.todo.md
+++ b/clientapp/.todo.md
@@ -7,8 +7,8 @@
 
 ## Step one
 
-1. I need to create a store and reducer that asynchronously fetches the data when the user logs in to the app and store the state into
-   async storage for offline usage ( completed ),
+1. need to create a store and reducer that asynchronously fetches the data when the user logs in to the app and store the state into
+   async storage for offline usage [completed]
    now,
    if the device has an internet connection, fetch the data from the thunk middleware, if there is no internet, use the async storage instead.
 
@@ -29,4 +29,7 @@
 1. Auth should return a jwt token, send that token to the server and verify. [completed]
 1. Need to reduce the network requests by storing keys and stuffs on the secure store. [completed]
 1. Define application flow [completed]
-1. Create a workspace with userid as owner (client side)
+1. Create a workspace with userid as owner (client side) [completed]
+1. Upon login retive user informations from the server and store it in localstorage (for offline use)
+
+login > create profile > workspace > create team <= this is mandatory onboarding screen:
